# squidge

./: Cargo.toml  README.md  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  build.yml  lint.yml  main.yml  pr.yml  release-packages-check.yml  release-packages.yml  release.yml  test.yml
examples/: paths.txt
sqdj/: Cargo.toml  README.md
sqdj/src/: main.rs
sqdj/src/assets/: example-paths.txt
sqdj/tests/: cli.rs
sqdj/tests/common/: mod.rs
sqdj/tests/data/: input-1.txt  input-2.txt
squidge/: Cargo.toml  README.md
squidge/src/: lib.rs
src/: lib.rs  main.rs
