[workspace]
members = [
    "squidge",
    "sqdj",
]
resolver = "3"

[workspace.package]
version = "0.2.4"
edition = "2024"
authors = ["Dhruv Thakur"]
repository = "https://github.com/dhth/squidge"
homepage = "https://github.com/dhth/squidge"
license = "MIT"
exclude = [
    ".github",
]

[workspace.dependencies]
anyhow = "1.0.98"
regex = "1.11.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
