[workspace]
members = [
    "squidge",
    "sqdj",
]
resolver = "3"

[workspace.package]
version = "0.2.4"
edition = "2024"
authors = ["Dhruv Thakur"]
repository = "https://github.com/dhth/squidge"
homepage = "https://github.com/dhth/squidge"
license = "MIT"
exclude = [
    ".github",
]

[workspace.dependencies]
anyhow = "1.0.100"
insta = { version = "1.46.2", features = [ "yaml" ] }
regex = "1.12.2"
squidge = { version = "0.2.4", path = "squidge" }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
