[package]
name = "sqdj"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description = "sqdj (short for squidge) shortens delimited data"
keywords = [
    "cli",
    "delimited",
    "shortener",
]
categories = [
    "command-line-utilities",
    "text-processing"
]

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.40", features = ["derive"] }
regex.workspace = true
squidge = { path = "../squidge" }
insta = "1.43.1"
insta-cmd = "0.6.0"
