[package]
name = "squidge"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description = "squidge shortens delimited data"
keywords = [
    "delimited",
    "shortener",
]
categories = [
    "text-processing"
]

[dependencies]
regex.workspace = true

[dev-dependencies]
insta.workspace = true
